// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should render prefix and suffix element on prefix/suffix property 1`] = `
<ForwardRef
  onChange={[MockFunction]}
  placeholder="this is input"
  prefix="https://"
  suffix=".com"
>
  <div
    className="l-input-wrapper input-group input-group-suffix input-group-prefix"
  >
    <div
      className="l-input-group-prefix"
    >
      https://
    </div>
    <input
      className="l-input-inner"
      onChange={[MockFunction]}
      placeholder="this is input"
    />
    <div
      className="l-input-group-suffix"
    >
      .com
    </div>
  </div>
</ForwardRef>
`;

exports[`Input component should render the correct default Input 1`] = `
<ForwardRef
  onChange={[MockFunction]}
  placeholder="this is input"
>
  <div
    className="l-input-wrapper"
  >
    <input
      className="l-input-inner"
      onChange={[MockFunction]}
      placeholder="this is input"
    />
  </div>
</ForwardRef>
`;

exports[`Input component should render the disabled Input on disabled property 1`] = `
<ForwardRef
  disabled={true}
  onChange={[MockFunction]}
  placeholder="this is input"
>
  <div
    className="l-input-wrapper is-disabled"
  >
    <input
      className="l-input-inner"
      disabled={true}
      onChange={[MockFunction]}
      placeholder="this is input"
    />
  </div>
</ForwardRef>
`;

exports[`Input component should support size 1`] = `
<ForwardRef
  onChange={[MockFunction]}
  placeholder="this is input"
  size="lg"
>
  <div
    className="l-input-wrapper input-size-lg"
  >
    <input
      className="l-input-inner"
      onChange={[MockFunction]}
      placeholder="this is input"
    />
  </div>
</ForwardRef>
`;
